--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -22,8 +22,21 @@ jobs:
         with:
           node-version: '14'
       
-      - name: Homepage Scfeenshot
-        uses: JonathanTreffler/full-website-screenshot-action@v1.0
-        with:
-          url: https://vacuumlabs.com
-          destination: ./homepage.png
+#       - name: Homepage Scfeenshot
+#         uses: JonathanTreffler/full-website-screenshot-action@v1.0
+#         with:
+#           url: https://vacuumlabs.com
+#           destination: ./homepage.png
+
+      - name: checkout
+        uses: actions/checkout@v2
+      
+      - name: push
+        run: |
+          date > generated.txt
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push
+        
