--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -21,6 +21,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
+  
+      - name: Get current date
+        id: date
+        run: echo "name=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV  
       
       - name: checkout
         uses: actions/checkout@v2
@@ -35,7 +39,7 @@ jobs:
         uses: swinton/screenshot-website@v1.x
         with:
           source: https://vacuumlabs.com
-          destination: homepage-${{ date +"%Y-%m-%dT%H:%M:%S" }}.png
+          destination: homepage-${{ steps.date.outputs.date }}.png
           full-page: true
           width: 1920 
       
