--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -32,19 +32,28 @@ jobs:
       - name: Install capture-website-cli
         shell: bash
         run: |
-          echo "Installing dependencies ..."
+          echo "Installing capture-website-cli"
           npm install --global capture-website-cli 1> /dev/null
-          echo "Dependencies installed successfully"
+          echo "capture-website-cli installed successfully"
+
+      - name: Install imagemin
+        shell: bash
+        run: |
+          echo "Installing imagemin-cli"
+          npm install --global imagemin-cli
+          echo "imagemin-cli installed successfully"
 
       - name: Screenshot Website
         shell: bash
         run: |
-          capture-website "https://vacuumlabs.com" --output "./homepage-$(date +'%Y-%m-%dT%H:%M:%S').png" --full-page --scale-factor 1
+          capture-website "https://vacuumlabs.com" --output "./homepage-screenshot.png" --full-page --scale-factor 1
           echo "Screenshot done"
       
       - name: push
         run: |
           ls > generated.txt
+          imagemin homepage-screenshot.png > "./homepage-$(date +'%Y-%m-%dT%H:%M:%S').png"
+          rm homepage-screenshot.png
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
