--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -41,8 +41,8 @@ jobs:
           timestamp=$(date +'%Y-%m-%dT%H:%M:%S')
           mv homepage-screenshot.jpeg "./homepage/homepage-$timestamp.jpeg"
           mv contact-screenshot.jpeg "./contact/contact-$timestamp.jpeg"
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name MikiVlckova
+          git config user.email michaela.vlckova@vacuumlabs.com
           git add .
           git commit -m "generated"
           git push
