--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -5,7 +5,7 @@ name: Screenshot
 # Controls when the action will run.
 on:
   schedule:
-    - cron: '12 0/4 * * *'
+    - cron: '12 12 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
